--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 			<div class="charts">
 				<div class="chart">
 					<button class="switch_chart">
-					
+
 					</button>
 					<div class="chart_round">
-					
+
 					</div>
 				</div>
 				<div class="stats">
@@ -50,14 +50,62 @@
 					<p class="history_title">История</p>
 					<p class="plug"></p>
 				</div>
-				<div class="history_note"> <!-- убрать --!>
+				<div class="history_note"> <!-- убрать -->
 					<img class="category_icon" src="" alt="category">
 					<p class="note_title">пальто из шерсти бобра</p>
 					<p class="note_cost">-300Р</p>
-				</div> <!-- убрать --!>
+				</div> <!-- убрать -->
 			</div>
 		</div>
     </main>
+
+	<div class="popup popup_add_new_transaction">
+		<h1 class="popup__title">Добавить операцию</h1>
+		<button type="button" class="popup__close"></button>
+		<div class="popup__new-transaction-data">
+			<div class="new-transaction-data__form form-summ">
+				<h2 class="new-transaction-data__title">Сумма</h2>
+
+				<button type="button" class="form-summ__choose-income"></button>
+				<button type="button" class="form-summ__choose-expense"></button>
+
+				<input type="text" name="transaction-summ" placeholder="100 &#x20bd;" class="form__item form__item-summ">
+			</div>
+
+			<div class="new-transaction-data__form form-date">
+				<h2 class="new-transaction-data__title">Дата</h2>
+
+				<!-- todo: ежедневно обновляющаяся плейсхолдер дата (js) -->
+				<!-- todo: красивый значок календаря -->
+				<input type="date" name="transaction-date" placeholder="MM/DD/YYYY" class="form__item form__item-date">
+			</div>
+
+			<div class="new-transaction-data__form form-category">
+				<h2 class="new-transaction-data__title">Категория</h2>
+
+				<!-- todo: красивая дропдаун стрелочка (можно сделать чтобы разворачивалась на 180 при открытии формы) -->
+				<select class="form__item form__item-category" name="transaction-category">
+					<option value="fastfood">Фастфуд</option>
+					<option value="clothes_shoes">Одежда и обувь</option>
+					<option value="restaurant">Рестораны</option>
+					<option value="other">Другое</option>
+				</select>
+			</div>
+
+			<div class="new-transaction-data__form form-note">
+				<h2 class="new-transaction-data__title">Комментарий</h2>
+
+				<input type="text" name="transaction-note" placeholder="Пометки для быстрого поиска. Например: аванс" class="form__item form__item-note">
+			</div>
+
+			<div class="new-transaction-data__form form-place">
+				<h2 class="new-transaction-data__title">Место</h2>
+
+				<input type="text" name="transaction-place" placeholder="Унифуд" class="form__item form__item-place">
+			</div>
+		</div>
+	</div>
+
 	<template class="note_template">
 		<div class="history_note">
 			<img class="category_icon" src="" alt="">
