--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GOOIIIIDAAAAA</title>
     <link rel="stylesheet" href="blocks/index.css">
+    <link rel="stylesheet" href="blocks/popup.css">
 </head>
 <body>
 	<header class="header">
@@ -59,52 +60,61 @@
 		</div>
     </main>
 
-	<div class="popup popup_add_new_transaction">
-		<h1 class="popup__title">Добавить операцию</h1>
-		<button type="button" class="popup__close"></button>
-		<div class="popup__new-transaction-data">
-			<div class="new-transaction-data__form form-summ">
-				<h2 class="new-transaction-data__title">Сумма</h2>
+	<div class="popup popup_type_new_transaction">
+		<div class="popup__content popup__content_new_transaction">
+			<h1 class="popup__title">Добавить операцию</h1>
+			<div class="popup__new-transaction-data">
+				<div class="new-transaction-data__form form-summ">
+					<h2 class="new-transaction-data__title">Сумма</h2>
 
-				<button type="button" class="form-summ__choose-income"></button>
-				<button type="button" class="form-summ__choose-expense"></button>
+					<div class="form-summ__choose">
+						<button type="button" name="income" class="form-summ__choose-button"></button>
+						<button type="button" name="expense" class="form-summ__choose-button"></button>
+					</div>
 
-				<input type="text" name="transaction-summ" placeholder="100 &#x20bd;" class="form__item form__item-summ">
+					<input type="text" name="transaction-summ" placeholder="100 &#x20bd;" class="form__item form__item-summ">
+				</div>
+
+				<div class="new-transaction-data__form form-date">
+					<h2 class="new-transaction-data__title">Дата</h2>
+
+					<!-- todo: ежедневно обновляющаяся плейсхолдер дата (js) -->
+					<!-- todo: красивый значок календаря -->
+					<input type="date" name="transaction-date" placeholder="MM/DD/YYYY" class="form__item form__item-date">
+				</div>
+
+				<div class="new-transaction-data__form form-category">
+					<h2 class="new-transaction-data__title">Категория</h2>
+
+					<!-- todo: красивая дропдаун стрелочка (можно сделать чтобы разворачивалась на 180 при открытии формы) -->
+					<select class="form__item form__item-category" name="transaction-category">
+						<option value="fastfood">Фастфуд</option>
+						<option value="clothes_shoes">Одежда и обувь</option>
+						<option value="restaurant">Рестораны</option>
+						<option value="other">Другое</option>
+					</select>
+				</div>
+
+				<div class="new-transaction-data__form form-note">
+					<h2 class="new-transaction-data__title">Комментарий</h2>
+
+					<input type="text" name="transaction-note" placeholder="Пометки для быстрого поиска. Например: аванс" class="form__item form__item-note">
+				</div>
+
+				<div class="new-transaction-data__form form-place">
+					<h2 class="new-transaction-data__title">Место</h2>
+
+					<input type="text" name="transaction-place" placeholder="Унифуд" class="form__item form__item-place">
+				</div>
 			</div>
 
-			<div class="new-transaction-data__form form-date">
-				<h2 class="new-transaction-data__title">Дата</h2>
-
-				<!-- todo: ежедневно обновляющаяся плейсхолдер дата (js) -->
-				<!-- todo: красивый значок календаря -->
-				<input type="date" name="transaction-date" placeholder="MM/DD/YYYY" class="form__item form__item-date">
-			</div>
-
-			<div class="new-transaction-data__form form-category">
-				<h2 class="new-transaction-data__title">Категория</h2>
-
-				<!-- todo: красивая дропдаун стрелочка (можно сделать чтобы разворачивалась на 180 при открытии формы) -->
-				<select class="form__item form__item-category" name="transaction-category">
-					<option value="fastfood">Фастфуд</option>
-					<option value="clothes_shoes">Одежда и обувь</option>
-					<option value="restaurant">Рестораны</option>
-					<option value="other">Другое</option>
-				</select>
-			</div>
-
-			<div class="new-transaction-data__form form-note">
-				<h2 class="new-transaction-data__title">Комментарий</h2>
-
-				<input type="text" name="transaction-note" placeholder="Пометки для быстрого поиска. Например: аванс" class="form__item form__item-note">
-			</div>
-
-			<div class="new-transaction-data__form form-place">
-				<h2 class="new-transaction-data__title">Место</h2>
-
-				<input type="text" name="transaction-place" placeholder="Унифуд" class="form__item form__item-place">
+			<div class="popup_close">
+				<button type="button" name="cancel" class="popup_close__buton">Отмена</button>
+				<button type="button" name="add" class="popup_close__buton">Сохранить</button>
 			</div>
 		</div>
 	</div>
+
 
 	<template class="note_template">
 		<div class="history_note">
